[gd_scene load_steps=4 format=3 uid="uid://iluigbvh8h16"]

[ext_resource type="Theme" uid="uid://diyisvvvu1ui5" path="res://Themes/menu_button_theme.tres" id="1_2rikc"]
[ext_resource type="Script" path="res://Scripts/pause_menu_ui.gd" id="1_5br11"]

[sub_resource type="LabelSettings" id="LabelSettings_hkf4y"]
font_size = 48
font_color = Color(0.25098, 0.4, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[node name="PauseMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5br11")

[node name="MenuLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.5
offset_right = 144.5
offset_bottom = 70.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_hkf4y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -70.0
offset_right = 97.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2rikc")
text = "Resume Game"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2rikc")
text = "Restart Game"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -42.0
offset_right = 126.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_2rikc")
text = "Return to Main Menu
"

[connection signal="pressed" from="ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
